--- a/api/package.json
+++ b/api/package.json
@@ -6,9 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/index.ts",
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
     "start": "node ./dist/index.js"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -22,6 +28,8 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
     "nodemon": "^3.0.3",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
