--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,11 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "./dist/index.js",
-      "use": "@vercel/node",
-      "config": { "includeFiles": ["dist/**"] }
-    }
-  ],
-  "routes": [{ "src": "/(.*)", "dest": "./dist/index.js" }]
+  "builds": [{ "src": "/src", "use": "@vercel/node" }],
+  "rewrites": [{ "src": "/(.*)", "dest": "/dist" }]
 }
