--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
   "builds": [{ "src": "/src", "use": "@vercel/node" }],
-  "rewrites": [{ "src": "/(.*)", "dest": "/dist" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "/dist" }]
 }
