--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{ "src": "/src", "use": "@vercel/node" }],
-  "rewrites": [{ "source": "/(.*)", "destination": "/dist" }]
+  "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
+  "rewrites": [{ "source": "/(.*)", "destination": "src/index.ts" }]
 }
